<resources>
    <string name="app_name">Smack Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="add_channel_button">add channel button</string>
    <string name="message">message</string>
    <string name="please_log_in">Please Log In</string>
    <string name="sign_up_here">Sign up here</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="user_name">user name</string>
    <string name="generate_background_color">Generate background color</string>
    <string name="create_user">Create user</string>
    <string name="tap_to_generate_user_avatar">Tap to generate user avatar</string>
    <string name="user_avatar">user avatar</string>
    <string name="send_message_button">send message button</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
</resources>
