<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Controller.CreateUserActivity">

    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/createUserUserName" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/user_name"
            android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:ems="10"
            android:id="@+id/createUserEmail" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/createUserUserName"
            app:layout_constraintStart_toStartOf="@+id/createUserUserName" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="@+id/createUserUserName" android:hint="@string/email"
            android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/createUserPassword"
            app:layout_constraintStart_toStartOf="@+id/createUserEmail" app:layout_constraintEnd_toEndOf="@+id/createUserEmail"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/createUserEmail"
            android:hint="@string/password" android:importantForAutofill="no" tools:ignore="UnusedAttribute"/>
    <Button
            android:text="@string/generate_background_color"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/createUserAvatarBgGenBtn" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/createUserAvatar"
            app:layout_constraintEnd_toEndOf="@+id/createUserPassword"
            app:layout_constraintStart_toStartOf="@+id/createUserPassword" android:background="@color/colorPrimary"
            android:textSize="14sp" android:textColor="#ffffff" android:textStyle="bold"
            android:onClick="createUserAvatarBgGenBtnClicked"/>
    <Button
            android:text="@string/create_user"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/createUserBtn" app:layout_constraintEnd_toEndOf="@+id/createUserAvatarBgGenBtn"
            app:layout_constraintStart_toStartOf="@+id/createUserAvatarBgGenBtn" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:background="@color/colorPrimary"
            android:textStyle="bold" android:textColor="#ffffff" android:textSize="14sp"
            android:onClick="createUserBtnClicked"/>
    <TextView
            android:text="@string/tap_to_generate_user_avatar"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/createUserText"
            app:layout_constraintStart_toStartOf="@+id/createUserAvatar"
            app:layout_constraintEnd_toEndOf="@+id/createUserAvatar"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/createUserPassword"/>
    <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp" app:srcCompat="@drawable/profiledefault"
            android:id="@+id/createUserAvatar"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/createUserText"
            app:layout_constraintStart_toStartOf="@+id/createUserAvatarBgGenBtn"
            app:layout_constraintEnd_toEndOf="@+id/createUserAvatarBgGenBtn" android:clickable="true"
            android:onClick="createUserAvatarClicked" android:contentDescription="@string/user_avatar"/>
</android.support.constraint.ConstraintLayout>