<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

    <Button
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/loginScreenLoginBtn"
            app:layout_constraintTop_toBottomOf="@+id/loginScreenPassword" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline"
            app:layout_constraintEnd_toEndOf="@+id/loginScreenPassword"
            app:layout_constraintStart_toStartOf="@+id/loginScreenPassword"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff" android:textSize="18sp" android:textStyle="bold"
            android:onClick="loginScreenLoginBtnClicked"/>
    <Button
            android:text="@string/sign_up_here"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/signUpBtn"
            app:layout_constraintTop_toBottomOf="@+id/loginScreenText" android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/loginScreenPassword"
            app:layout_constraintStart_toStartOf="@+id/loginScreenPassword"
            android:background="@color/colorPrimary"
            android:textColor="#ffffff" android:textSize="18sp" android:textStyle="bold"
            android:onClick="signUpBtnClicked"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginScreenEmail"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:hint="@string/email"
            app:layout_constraintBottom_toTopOf="@+id/loginScreenPassword"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp" app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintHorizontal_bias="0.0" android:importantForAutofill="no"
            tools:ignore="UnusedAttribute"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/loginScreenPassword"
            app:layout_constraintTop_toBottomOf="@+id/loginScreenEmail"
            app:layout_constraintEnd_toEndOf="@+id/loginScreenEmail" app:layout_constraintStart_toStartOf="@+id/loginScreenEmail"
            android:hint="@string/password"
            app:layout_constraintBottom_toTopOf="@+id/loginScreenLoginBtn" app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp" android:layout_marginBottom="16dp" android:importantForAutofill="no"
            tools:ignore="UnusedAttribute"/>
    <TextView
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:id="@+id/loginScreenText"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
            app:layout_constraintVertical_chainStyle="packed"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintVertical_bias="0.3"
            app:layout_constraintStart_toStartOf="@+id/signUpBtn" app:layout_constraintEnd_toEndOf="@+id/signUpBtn"/>
    <android.support.constraint.Guideline android:layout_width="wrap_content" android:layout_height="wrap_content"
                                          android:id="@+id/guideline"
                                          android:orientation="horizontal" app:layout_constraintGuide_percent="0.35"/>
</android.support.constraint.ConstraintLayout>